# pySatData

./: .gitignore  LICENSE  MANIFEST.in  ParamentsMaxMinVxCME.csv  README.md  config_file.json  download_data.py  plot_interpFlux_RBSP.py  pyproject.toml  setup.py  testes.py  tests.py  tests_PlotAB.py
.github/workflows/: publish-to-test-pypi.yml  python-publish.yml
examples/: download_data.py  plot_interpFlux_RBSP.py
pysatdata/: __init__.py  version.py
pysatdata/loaders/: load.py
pysatdata/resources/: config.py  config_file.json
pysatdata/resources/ace/: config_file.json
pysatdata/resources/dmsp/: config_file.json
pysatdata/resources/erg/: config_file.json
pysatdata/resources/goes13_15/: config_file.json
pysatdata/resources/goes16_17/: config_file.json
pysatdata/resources/omni/: config_file.json
pysatdata/resources/rbsp/: config_file.json
pysatdata/resources/themis/: config_file.json
pysatdata/satellites/: read_ace.py  read_dmsp.py  read_goes.py  read_rbsp.py
pysatdata/utils/: cdf_to_tplot.py  download.py  interpolate_flux_rbsp.py  library_functions.py  netcdf2tplot.py
pysatdata/utils/flux2PhSD/: flux2PhSD.py  getData2PhSD.py
pysatdata/utils/plotFunc/: plot_funtions.py
pysatdata/utils/resources/: config_file.json
src/pysatdata/: __init__.py  version.py
src/pysatdata/loaders/: load.py
src/pysatdata/resources/: config_file.json
src/pysatdata/satellites/: read_ace.py  read_ace_merged.py  read_themis.py
src/pysatdata/utils/: dailynames.py  interpolate_flux_rbsp.py  library_functions.py  netcdf2tplot.py  time_double.py  time_string.py
(+2 files in other folders)
