[project]
name = "pysatdata"
version = "1.0.2"
authors = [
  { name="Jose Paulo Marchezi", email="jpmarchezi@gmail.com" },
]
description = "Python package for reading, cleaning, and perform operations on satellite data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zemarchezi/pySatData"
"Bug Tracker" = "https://github.com/zemarchezi/pySatData/issues"